cabal-version:      3.0
name:               ghc-datasize
version:            0.2.2
license:            BSD-3-Clause
license-file:       LICENSE
category:           GHC, Debug, Development
build-type:         Simple
author:             Dennis Felsing <dennis@felsin9.de>
maintainer:         Dennis Felsing <dennis@felsin9.de>
homepage:           http://felsin9.de/nnis/ghc-datasize
copyright:          Dennis Felsing 2012-2019
synopsis:           Determine the size of data structures in GHC's memory
description:        ghc-datasize is a tool to determine the size of data
                    structures in GHC's memory. Determining the size of
                    recursive data structures is supported. All sizes are in
                    Bytes.

tested-with: GHC == 8.10.1

Library
  Exposed-modules:
    GHC.DataSize
  cmm-sources:
    src/GHC/unpack_closure_ptrs.cmm
  Default-Language: Haskell2010
  Build-depends: base >= 4.14,
                 deepseq >= 1.3 && < 1.5,
                 ghc-heap >= 8.10,
                 unordered-containers ==0.2.*,
                 hashable ==1.3.*,
                 primitive
  Hs-source-dirs: src/
  Ghc-options: -Wall

benchmark benchmarks
  build-depends:    base, criterion, ghc-datasize, primitive, deepseq
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  type:             exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/mpardalos/ghc-datasize.git
